--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4908,9 +4908,9 @@ font-style: italic;
     <h3><a name="OperationReferenceMessageModel_payload"><code>OperationReferenceMessageModel_payload</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     
     <div class="field-items">
-      <div class="param">consent (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent (consentUrl) format: url</div>
-<div class="param">operationReference (optional)</div><div class="param-desc"><span class="param-type"><a href="#OperationReferenceModel">OperationReferenceModel</a></span>  </div>
-<div class="param">serviceProvider (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider (publishedProviderUrl) format: url</div>
+      <div class="param">consent </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent (consentUrl) format: url</div>
+<div class="param">operationReference </div><div class="param-desc"><span class="param-type"><a href="#OperationReferenceModel">OperationReferenceModel</a></span>  </div>
+<div class="param">serviceProvider </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider (publishedProviderUrl) format: url</div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
