--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4578,6 +4578,7 @@ font-style: italic;
     <li><a href="#ServiceTypeModel"><code>ServiceTypeModel</code> - </a></li>
     <li><a href="#ServiceTypeModel_links"><code>ServiceTypeModel_links</code> - </a></li>
     <li><a href="#ServiceTypesModel"><code>ServiceTypesModel</code> - </a></li>
+    <li><a href="#SourceCandidatesMessageModel_payload"><code>SourceCandidatesMessageModel_payload</code> - </a></li>
     <li><a href="#SourceModel"><code>SourceModel</code> - </a></li>
     <li><a href="#SourceModel_links"><code>SourceModel_links</code> - </a></li>
     <li><a href="#SourceUrlModel"><code>SourceUrlModel</code> - </a></li>
@@ -4596,6 +4597,7 @@ font-style: italic;
     <li><a href="#PersistentIdEventModel"><code>PersistentIdEventModel</code> - </a></li>
     <li><a href="#QiyNodeCreateRequestParametersModel"><code>QiyNodeCreateRequestParametersModel</code> - </a></li>
     <li><a href="#QiyNodeCredentialModel"><code>QiyNodeCredentialModel</code> - </a></li>
+    <li><a href="#SourceCandidatesMessageModel"><code>SourceCandidatesMessageModel</code> - </a></li>
   </ol>
 
   <div class="model">
@@ -5171,6 +5173,14 @@ font-style: italic;
           </div>  <!-- field-items -->
   </div>
   <div class="model">
+    <h3><a name="SourceCandidatesMessageModel_payload"><code>SourceCandidatesMessageModel_payload</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    
+    <div class="field-items">
+      <div class="param">consent </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent (consentUrl) format: url</div>
+<div class="param">candidates </div><div class="param-desc"><span class="param-type"><a href="#CandidatesModel">CandidatesModel</a></span>  </div>
+    </div>  <!-- field-items -->
+  </div>
+  <div class="model">
     <h3><a name="SourceModel"><code>SourceModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Source Model.</div>
     <div class="field-items">
@@ -5354,6 +5364,19 @@ font-style: italic;
     <div class="field-items">
       <div class="param">id </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Qiy Node Id. </div>
 <div class="param">privateKey </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Qiy Node RSA private key. </div>
+    </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="SourceCandidatesMessageModel"><code>SourceCandidatesMessageModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+      <div class="param">created (optional)</div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Message creation time. format: Unix time in ms</div>
+<div class="param">inbound (optional)</div><div class="param-desc"><span class="param-type"><a href="#boolean">Boolean</a></span> Whether the received message is inbound or outbound. </div>
+<div class="param">payload </div><div class="param-desc"><span class="param-type"><a href="#SourceCandidatesMessageModel_payload">SourceCandidatesMessageModel_payload</a></span>  </div>
+<div class="param">refSerialNr </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Reference serial number format: nullable</div>
+<div class="param">serialNr (optional)</div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Serial number of the message. </div>
+<div class="param">text </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Subject </div>
+<div class="param">type </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  format: 'https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#source-candidates-message'</div>
     </div>  <!-- field-items -->
   </div>
   </body>
